<resources>
    <string name="app_name">Factory Clicker</string>
    <string name="strUserInventory">%.0f/%.0f</string>
    <string name="strSlash">/</string>
    <string name="strUserInv">%d</string>
    <string name="strK">k</string>
    <string name="strM">M</string>
    <string name="strB">B</string>
    <string name="percentage">%.1f</string>
    <string name="strConsProd">%1$.2f/%2$.2f</string>
    <string name="strNbIngredientNeed">%.0f</string>
    <string name="ClickButton">ClickButton</string>
    <string name="ingredient4">ingredient4</string>
    <string name="ingredient1">ingredient1</string>
    <string name="ingredient2">ingredient2</string>
    <string name="ingredient3">ingredient3</string>
    <string name="right_arrow">right_arrow</string>
    <string name="produceditem">producedItem</string>
    <string name="resourceimg">resourceImg</string>
    <string name="cost">cost</string>
    <string name="_0">0</string>
    <string name="_1000">1000</string>
    <string name="miner">Mine.</string>
    <string name="smelter">Smelt.</string>
    <string name="manuf">Manu.</string>
    <string name="assemb">Assem.</string>
    <string name="constr">Const.</string>
    <string name="inventory">Inv.</string>
    <string name="buy_miner">Buy Miner</string>
    <string name="buy_manufacturer">Buy Manufacturer</string>
    <string name="buy_smelter">Buy Smelter</string>
    <string name="buy_constructor">Buy Constructor</string>
    <string name="buy_assembler">Buy Assembler</string>
    <string name="strInt">%d</string>
    <string name="prodPerMin">%d/min</string>
    <string name="nbMinerUsed">%d/%d Miners used</string>
    <string name="nbSmelterUsed">%d/%d Smelters left</string>
    <string name="nbConstructorUsed">%d/%d Constructors left</string>
    <string name="nbAssemblerUsed">%d/%d Assemblers left</string>
    <string name="nbMachineUsed">%d/%d Machine used</string>
    <string name="nbManufacturerUsed">%d/%d Manufacturers left</string>
    <string name="title_activity_my_main">MyMainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="empty"></string>
    <string name="shared_pref_name">data_shared_preffff"></string>
    <string name="Upgrade">Upgrade</string>
    <string name="UpgradeInventory">Upgrade inventory size by %d</string>
    <string name="prestige">Prestige</string>
    <string name="RestartTxt">Restart game (increase inventory upgrade by 10% more)</string>
    <string name="txtObj">Master automation ! complete all 15 loading goals !</string>
</resources>
