<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1.1">


    <ImageButton
        android:id="@+id/btnMinerAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/nbMiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.1"
        android:text="@string/_0" />

    <ImageView
        android:id="@+id/resourceImageMiner"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_weight="0.2"
        android:contentDescription="@string/resourceimg" />

    <TextView
        android:id="@+id/minerProdPerMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="0.4"
        android:text="@string/_1000"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/btnMinerDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        app:srcCompat="@android:drawable/ic_delete" />

</LinearLayout>