<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrangeDark">

    <LinearLayout
        android:id="@+id/comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/item1Img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@mipmap/ic_image_cable" />

            <TextView
                android:id="@+id/item1Nb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/item2Img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@mipmap/ic_image_cable" />

            <TextView
                android:id="@+id/item2Nb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/item3Img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@mipmap/ic_image_cable" />

            <TextView
                android:id="@+id/item3Nb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.25">

            <ImageView
                android:id="@+id/item4Img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:srcCompat="@mipmap/ic_image_cable" />

            <TextView
                android:id="@+id/item4Nb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_0" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/part2"
        android:layout_below="@id/comp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBuyMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/buy_assembler"/>

        <TextView
            android:id="@+id/tvMachineUsed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBuyMachine"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_0" />

        <Button
            android:id="@+id/btnPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:text="@string/cost"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/machineListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/part2"
        android:divider="#000000"
        android:dividerHeight="1dp"
        android:foreground="@drawable/border">

    </ListView>


</RelativeLayout>